# webrtc-audio

./: README.md
java/: WebRTCTest.kt  WebrtcAudioLibrary.java
webrtc/: CMakeLists.txt
webrtc/absl/: Makefile  cmake_install.cmake
webrtc/absl/algorithm/: Makefile  cmake_install.cmake
webrtc/absl/base/: Makefile  cmake_install.cmake
webrtc/absl/container/: Makefile  cmake_install.cmake
webrtc/absl/debugging/: Makefile  cmake_install.cmake
webrtc/absl/flags/: Makefile  cmake_install.cmake
webrtc/absl/functional/: Makefile  cmake_install.cmake
webrtc/absl/hash/: Makefile  cmake_install.cmake
webrtc/absl/memory/: Makefile  cmake_install.cmake
webrtc/absl/meta/: Makefile  cmake_install.cmake
webrtc/absl/numeric/: Makefile  cmake_install.cmake
webrtc/absl/random/: Makefile  cmake_install.cmake
webrtc/absl/status/: Makefile  cmake_install.cmake
webrtc/absl/strings/: Makefile  cmake_install.cmake
webrtc/absl/synchronization/: Makefile  cmake_install.cmake
webrtc/absl/time/: Makefile  cmake_install.cmake
webrtc/absl/types/: Makefile  cmake_install.cmake
webrtc/absl/utility/: Makefile  cmake_install.cmake
webrtc/common_audio/resampler/: sinc_resampler.cc  sinc_resampler.h
webrtc/common_audio/vad/: webrtc_vad.c
webrtc/modules/audio_processing/include/: webrtc_ns.cc  webrtc_ns.h
